parser/metamodel/src/test/data/errors/PackageLess.mm.merr
File: parser/metamodel/src/test/data/badModels/tekgenesis/sales/PackageLess.mm
(6, 42): Empty domain name for : 'DocType'
(10, 30): Empty domain name for : 'Sex'
(29, 6): Invalid field name  'id'
(31, 34): Empty domain name for : 'Customer'
(34, 35): Empty domain name for : 'Product'
(33, 31): Empty domain name for : 'Item'
(25, 6): Field not found or illegal: 'id' in type: 'Invoice'
(34, 35): Cannot resolve 'Product'.
(27, 19): Cannot resolve 'id'.
(73, 6): Cannot resolve symbol 'id'
(78, 15): Field 'product' has unresolved type
(81, 13): Feature 'disable' is duplicated, or redundant in widget 'text_field(Decimal(10, 2))'
(34, 35): Cannot resolve 'Product'.
(27, 19): Cannot resolve 'id'.
(91, 49): Cannot resolve 'total'.
